--- a/app/Resources/views/admin/base_login.html.twig
+++ b/app/Resources/views/admin/base_login.html.twig
@@ -14,7 +14,7 @@
 </head>
 <body>
 <nav class="navbar navbar-transparent navbar-absolute">
-    <div class="container">    
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
                 <span class="sr-only">Toggle navigation</span>
@@ -24,8 +24,8 @@
             </button>
             <a class="navbar-brand" href="../dashboard.html">Symfony CMS</a>
         </div>
-        <div class="collapse navbar-collapse">       
-            
+        <div class="collapse navbar-collapse">
+
             <ul class="nav navbar-nav navbar-right">
                 <li>
                    <a href="register.html">
@@ -39,18 +39,18 @@
 
 
 <div class="wrapper wrapper-full-page">
-    <div class="full-page login-page" data-color="black" data-image="{{ asset('bundles/core/images/full-back-1.jpeg') }}">   
-        
+    <div class="full-page login-page" data-color="black" data-image="{{ asset('bundles/core/images/full-back-1.jpeg') }}">
+
     <!--   you can change the color of the filter page using: data-color="blue | azure | green | orange | red | purple" -->
         <div class="content">
             <div class="container">
-                <div class="row">                   
+                <div class="row">
                 	{% block body %}
                 	{% endblock body %}
                 </div>
             </div>
         </div>
-    	
+
     	<footer class="footer footer-transparent">
             <div class="container">
                 <nav class="pull-left">
@@ -83,13 +83,14 @@
             </div>
         </footer>
 
-    </div>                             
-       
+    </div>
+
 </div>
 
 </body>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    {% javascripts filter="?jsqueeze" output='js/scms.js'
+    {% javascripts filter="?jsqueeze" output='js/dcms.js'
+        'bundles/core/js/jquery-ui.min.js'
         'bundles/core/js/bootstrap.min.js'
         'bundles/core/js/bootstrap-checkbox-radio-switch.js'
         'bundles/core/js/bootstrap-notify.js'
@@ -101,11 +102,11 @@
     %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
-	    
+
     <script type="text/javascript">
         $().ready(function(){
             lbd.checkFullPageBackgroundImage();
-            
+
             setTimeout(function(){
                 // after 1000 ms we add the class animated to the login/register card
                 $('.card').removeClass('card-hidden');
