--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -1,25 +1,27 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-    <div class="section-header">
-        <h2 class="text-primary pull-left">Contenus</h2>
-        <a href="{{ path('admin_content_new') }}" class="pull-right btn ink-reaction btn-floating-action btn-primary"><i class="fa fa-plus"></i></a>
-        <div class="clearfix"></div>
+{% for flashMessage in app.session.flashbag.get('error') %}
+    <div class="alert alert-callout alert-danger" role="alert">
+        {{ flashMessage|trans }}
     </div>
-
-    <div class="section-body">
-        <p class="lead"></p>
-        {% for flashMessage in app.session.flashbag.get('error') %}
-            <div class="alert alert-callout alert-danger" role="alert">
-                {{ flashMessage|trans }}
+{% endfor %}
+{% for flashMessage in app.session.flashbag.get('success') %}
+    <div class="alert alert-callout alert-success" role="alert">
+        {{ flashMessage|trans }}
+    </div>
+{% endfor %}
+<div id="main-card" class="card">
+    <div class="header">
+        <h4 class="title pull-left">{{ 'cms.core.users' |trans }}</h4>
+        <div class="fixed-table-toolbar">
+            <div class="columns columns-right pull-right">
+                <a href="{{ path('admin_content_new') }}" class="btn btn-default"><i class="fa fa-plus"></i></a>
             </div>
-        {% endfor %}
-        {% for flashMessage in app.session.flashbag.get('success') %}
-            <div class="alert alert-callout alert-success" role="alert">
-                {{ flashMessage|trans }}
-            </div>
-        {% endfor %}
-         <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table" data-swftools="{{ asset('bundles/core/swf/copy_csv_xls_pdf.swf') }}">
+        </div>
+    </div>
+    <div class="content">
+         <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
             <thead>
                 <tr>
                     <th>Id</th>
@@ -65,6 +67,7 @@
             </tbody>
         </table>
     </div>
+    </div>
 
     <div class="modal fade" id="modal-delete" aria-labelledby="simpleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -84,3 +87,14 @@
         </div>
     </div>
 {% endblock %}
+{% block javascript %}
+<script type="text/javascript">
+$('#modal-delete').on('show.bs.modal', function (event) {
+      var button = $(event.relatedTarget);
+      var id = button.data('id');
+      var path = Routing.generate('{{ url }}', {id: id});
+      var modal = $(this);
+      modal.find('.modal-footer > a.btn-danger').attr('href', path);
+})
+</script>
+{% endblock javascript %}
