--- a/web/css/admin_light-bootstrap-dashboard_5.css
+++ b/web/css/admin_light-bootstrap-dashboard_5.css
@@ -7085,6 +7085,16 @@ star {
   border-color: #FFFFFF;
 }
 
+.panel-default > .note-toolbar.panel-heading {
+    color: #333;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+}
+
+.note-btn-group .btn {
+  color: #000;
+}
+
 .panel-group .panel {
   border-radius: 0;
 }
@@ -7786,7 +7796,7 @@ star {
   .card form [class*="col-"] {
     padding: 0 6px;
   }
-  
+
   .table-full-width {
     margin-left: -15px;
     margin-right: -15px;
