--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -13,7 +13,7 @@
 {% endfor %}
 <div id="main-card" class="card">
     <div class="header">
-        <h4 class="title pull-left">{{ 'cms.core.users' |trans }}</h4>
+        <h4 class="title pull-left">{{ 'cms.content.content' |trans }}</h4>
         <div class="fixed-table-toolbar">
             <div class="columns columns-right pull-right">
                 <a href="{{ path('admin_content_new') }}" class="btn btn-default"><i class="fa fa-plus"></i></a>
@@ -29,6 +29,7 @@
                     <th>{{ 'cms.content.categories'|trans }}</th>
                     <th>{% for language in languages %}<img src="{{ asset('bundles/core/images/flags/' ~ language.codelang ~ '.png') }}" />&nbsp;{% endfor %}</th>
                     <th>{{ 'cms.content.author'|trans }}</th>
+                    <th>{{ 'cms.content.status'|trans }}</th>
                     <th>{{ 'cms.content.date'|trans }}</th>
                     <th class="no-sort text-right">{{ 'cms.content.actions'|trans }}</th>
                 </tr>
@@ -53,12 +54,17 @@
                         {% endfor %}
                     </td>
                     <td>{{ entity.author }}</td>
-                    <td>{% if entity.modified %}{{ entity.modified|date(date_format) }}{% endif %}<br />{{ entity.published|trans }}</td>
+                    <td>
+                        <div class="switch">
+                            <input type="checkbox" class="status" {% if entity.published %}checked="checked"{% endif %} data-id="{{ entity.id }}" data-repo="ContentBundle:Content" data-prop="published">
+                        </div>
+                    </td>
+                    <td>{% if entity.modified %}{{ entity.modified|date(date_format) }}{% endif %}</td>
                     <td class="text-right">
-                        <a href="{{ path('admin_content_edit', { 'id': entity.id }) }}" class="btn btn-icon-toggle" data-toggle="tooltip" data-placement="top" data-original-title="Editer">
+                        <a href="{{ path('admin_content_edit', { 'id': entity.id }) }}" class="btn btn-simple btn-info btn-xs" data-toggle="tooltip" data-placement="top" data-original-title="Editer">
                             <i class="fa fa-pencil"></i>
                         </a>
-                        <a data-toggle="modal" role="button" href='#modal-delete' class="btn btn-icon-toggle" rel="tooltip" data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}">
+                        <a data-toggle="modal" role="button" href='#modal-delete' class="btn btn-simple btn-danger btn-xs" rel="tooltip" data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}">
                             <i class="fa fa-trash-o"></i>
                         </a>
                     </td>
