--- a/src/CMS/Bundle/MenuBundle/Resources/views/Entry/index.html.twig
+++ b/src/CMS/Bundle/MenuBundle/Resources/views/Entry/index.html.twig
@@ -1,15 +1,6 @@
 {% extends "::admin/base_admin.html.twig" %}
 
-{% block body -%}
-
-    <div class="section-header">
-        <h2 class="text-primary pull-left">Entrées de menu</h2>
-        <a href="{{ path('admin_entry_new') }}" class="pull-right btn ink-reaction btn-floating-action btn-primary"><i class="fa fa-plus"></i></a>
-        <div class="clearfix"></div>
-    </div>
-
-    <div class="section-body">
-        <p class="lead"></p>
+{% block body %}
         {% for flashMessage in app.session.flashbag.get('error') %}
             <div class="alert alert-callout alert-danger" role="alert">
                 {{ flashMessage|trans }}
@@ -20,50 +11,57 @@
                 {{ flashMessage|trans }}
             </div>
         {% endfor %}
-        <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table" data-swftools="{{ asset('bundles/core/swf/copy_csv_xls_pdf.swf') }}">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Title</th>
-                    <th>Contenu</th>
-                    <th>Catégorie</th>
-                    <th>Taxonomy</th>
-                    <th>External url</th>
-                    <th class="no-sort text-right">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for entity in entities %}
-                <tr>
-                    <td>{{ entity.id }}</td>
-                    <td>{{ entity }}</td>
-                    <td>{{ entity.content }}</td>
-                    <td>{{ entity.category }}</td>
-                    <td>{{ entity.taxonomy }}</td>
-                    <td>{{ entity.externalurl }}</td>
-                    <td class="text-right">
-                        <a href="{{ path('admin_entry_edit', { 'id': entity.id }) }}" class="btn btn-icon-toggle" data-toggle="tooltip" data-placement="top" data-original-title="Editer">
-                            <i class="fa fa-pencil"></i>
-                        </a>
-                        <a data-toggle="modal" role="button" href='#modal-delete' class="btn btn-icon-toggle" rel="tooltip" data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}">
-                            <i class="fa fa-trash-o"></i>
-                        </a>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
+        <div id="main-card" class="card">
+            <div class="header">
+                <h4 class="title pull-left">{{ 'cms.menu.entry'|trans }}</h4>
+                <div class="fixed-table-toolbar">
+                    <div class="columns columns-right pull-right">
+                        <a href="{{ path('admin_entry_new', {'slug': slug}) }}" class="btn btn-default"><i class="fa fa-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="content">
+                <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
+                    <thead>
+                        <tr role="row">
+                            <th>{{ 'cms.entry.title'|trans }}</th>
+                            <th>{{ 'cms.entry.external'|trans }}</th>
+                            <th>{{ 'cms.entry.content'|trans }}</th>
+                            <th>{{ 'cms.entry.category'|trans }}</th>
+                            <th>{{ 'cms.entry.taxonomy'|trans }}</th>
+                            <th>{{ 'cms.entry.status'|trans }}</th>
+                            <th class="no-sort text-right" tabindex="0" aria-controls="data_table">{{ 'actions'|trans }}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for menu in entities %}
+                        <tr role="row">
+                            <td>{{ menu.title }}</td>
+                            <td>{{ menu.externalUrl }}</td>
+                            <td>{% if menu.content is not null %}{{ menu.content.title }}{% endif %}</td>
+                            <td>{% if menu.category is not null %}{{ menu.category.title }}{% endif %}</td>
+                            <td>{% if menu.taxonomy is not null %}{{ menu.taxonomy.name }}{% endif %}</td>
+                            <td><div class="switch" data-on-label="{{ 'yes'|trans }}" data-off-label="{{ 'no'|trans }}"><input type="checkbox"{% if menu.status %}checked="checked"{% endif %} class="status" data-id="{{ menu.id }}" data-repo="MenuBundle:MenuTaxonomy" data-prop="status"></div></td>
+                            <td class="text-right">
+                                <a href="{{ path('admin_entry_edit', {'id': menu.id }) }}" class="btn btn-info btn-simple btn-xs" data-toggle="tooltip" data-placement="top" data-original-title="Editer"><i class="fa fa-pencil"></i></a>
+                                <a data-toggle="modal" href='#modal-delete' class="btn btn-simple btn-danger btn-xs" data-toggle="tooltip" data-placement="top" data-original-title="Supprimer" data-id="{{ menu.id }}"><i class="fa fa-trash-o"></i></a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
     <div class="modal fade" id="modal-delete" aria-labelledby="simpleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">{{ 'cms.content.modal.title_delete'|trans }}</h4>
+                    <h4 class="modal-title">{{ 'cms.user.modal.title_delete'|trans }}</h4>
                 </div>
                 <div class="modal-body">
-                    {{ 'cms.content.modal.text_delete'|trans }}
+                    {{ 'cms.user.modal.text_delete'|trans }}
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn ink-reaction btn-raised btn-default-bright" data-dismiss="modal"><i class="fa fa-close"></i> {{ 'cancel'|trans }}</button>
@@ -72,4 +70,16 @@
             </div>
         </div>
     </div>
-    {% endblock %}
+{% endblock body %}
+{% block javascript %}
+<script type="text/javascript">
+$('#modal-delete').on('show.bs.modal', function (event) {
+      var button = $(event.relatedTarget);
+      var id = button.data('id');
+      var path = "{{ path(url, {'id': 'PLACEHOLDER'}) }}";
+      path = path.replace("PLACEHOLDER", id);
+      var modal = $(this);
+      modal.find('.modal-footer > a.btn-danger').attr('href', path);
+})
+</script>
+{% endblock javascript %}
