structure template front

--- a/app/Resources/views/admin/base_admin.html.twig
+++ b/app/Resources/views/admin/base_admin.html.twig
@@ -218,8 +218,11 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     {% javascripts filter="?jsqueeze" output='js/scms.js'
         '@CoreBundle/Resources/public/js/jquery-ui.min.js'
-		'@CoreBundle/Resources/public/js/bootstrap.min.js'
+        '@CoreBundle/Resources/public/js/bootstrap.min.js'
+		'@CoreBundle/Resources/public/js/moment.min.js'
+        '@CoreBundle/Resources/public/js/fr.js'
 		'@CoreBundle/Resources/public/js/bootstrap-checkbox-radio-switch-tags.js'
+        '@CoreBundle/Resources/public/js/bootstrap-datetimepicker.js'
 		'@CoreBundle/Resources/public/js/bootstrap-notify.js'
 		'@CoreBundle/Resources/public/js/bootstrap-select.js'
 		'@CoreBundle/Resources/public/js/bootstrap-table.js'
