--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -16,7 +16,32 @@
         <h4 class="title pull-left">{{ 'cms.content.content' |trans }}</h4>
         <div class="fixed-table-toolbar">
             <div class="columns columns-right pull-right">
-                <a href="{{ path('admin_content_new') }}" class="btn btn-default"><i class="fa fa-plus"></i></a>
+                <a data-toggle="modal" href="#modal-taxonomy" class="btn btn-default"><i class="fa fa-plus"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-taxonomy">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">{{ 'cms.content.taxonomies'|trans }}</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="taxonomies" class="form-label"></label>
+                        <select name="contenttaxonomy" id="taxonomies" class="form-control" onchange="changeUrl(this)">
+                            <option value="">--</option>
+                            {% for taxonomy in taxonomies %}
+                            <option value="{{ taxonomy.alias }}">{{ taxonomy.title }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-fill" data-dismiss="modal" aria-hidden="true">{{ 'Close'|trans }}</button>
+                    <a class="btn btn-info btn-fill">{{ 'New'|trans }}</a>
+                </div>
             </div>
         </div>
     </div>
@@ -95,6 +120,13 @@
 {% endblock %}
 {% block javascript %}
 <script type="text/javascript">
+function changeUrl(elem) {
+    var contenttaxonomy = $(elem).val();
+    var url = Routing.generate('admin_content_new', {'contenttaxonomy': contenttaxonomy});
+    $('#modal-taxonomy').find('.modal-footer > a').attr('href', url)
+}
+
+
 $('#modal-delete').on('show.bs.modal', function (event) {
       var button = $(event.relatedTarget);
       var id = button.data('id');
