--- a/src/CMS/Bundle/ContentBundle/Resources/views/Field/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Field/edit.html.twig
@@ -1,24 +1,14 @@
 {% extends "::admin/base_admin.html.twig" %}
 
-{% block body %}
-	<div class="section-header">
-		<ol class="breadcrumb">
-			<li><a href="">Champ</a></li>
-			<li class="active">Edition</li>
-		</ol>
-	</div>
-
-	<div class="section-body contain-lg">
-		{% for flashMessage in app.session.flashbag.get('error') %}
-		    <div class="alert alert-callout alert-danger" role="alert">
-		        {{ flashMessage|trans }}
-		    </div>
-		{% endfor %}
-		{% for flashMessage in app.session.flashbag.get('success') %}
-		    <div class="alert alert-callout alert-success" role="alert">{{ flashMessage|trans }}</div>
-		{% endfor %}
+{% block body -%}
+	<div class="col-md-8 col-md-offset-2 col-xs-12">
 		<div class="card">
-			<div class="card-body">{{ form(edit_form) }}</div>
+			<div class="header">{{ 'cms.content.field'|trans }}</div>
+			<div class="content">
+				{{ form_start(edit_form) }}
+				{{ form_rest(edit_form) }}
+				{{ form_end(edit_form) }}
+			</div>
 		</div>
 	</div>
 {% endblock %}
