--- a/src/CMS/Bundle/ContentBundle/Resources/views/Field/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Field/index.html.twig
@@ -1,55 +1,37 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-    <div class="section-header">
-        <h2 class="text-primary pull-left">Champs</h2>
-        <a href="#myModal" role="button" class="pull-right btn ink-reaction btn-floating-action btn-primary" data-toggle="modal"><i class="fa fa-plus"></i></a>
-        <div class="clearfix"></div>
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <form action="{{ path('admin_field_new') }}" method="get">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                            <h3 id="myModalLabel">{%trans%}CHOOSE_FIELD_TYPE{%endtrans%}</h3>
-                        </div>
-                        <div class="modal-body">
-                            {{ fieldstype|raw }}
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn" data-dismiss="modal" aria-hidden="true">{%trans%}Close{%endtrans%}</button>
-                            <input class="btn btn-primary" type="submit" value="{%trans%}New{%endtrans%}" />
-                        </div>
-                    </form>
-                </div>
+{% for flashMessage in app.session.flashbag.get('error') %}
+    <div class="alert alert-callout alert-danger" role="alert">
+        {{ flashMessage|trans }}
+    </div>
+{% endfor %}
+{% for flashMessage in app.session.flashbag.get('success') %}
+    <div class="alert alert-callout alert-success" role="alert">
+        {{ flashMessage|trans }}
+    </div>
+{% endfor %}
+<div id="main-card" class="card">
+    <div class="header">
+        <h4 class="title pull-left">{{ 'cms.content.field' |trans }}</h4>
+        <div class="fixed-table-toolbar">
+            <div class="columns columns-right pull-right">
+                <a href="#myModal" role="button" data-toggle="modal" class="btn btn-default"><i class="fa fa-plus"></i></a>
             </div>
         </div>
     </div>
-
-    <div class="section-body">
-        <p class="lead"></p>
-        {% for flashMessage in app.session.flashbag.get('error') %}
-            <div class="alert alert-callout alert-danger" role="alert">
-                {{ flashMessage|trans }}
-            </div>
-        {% endfor %}
-        {% for flashMessage in app.session.flashbag.get('success') %}
-            <div class="alert alert-callout alert-success" role="alert">
-                {{ flashMessage|trans }}
-            </div>
-        {% endfor %}
-
-        <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table" data-swftools="{{ asset('bundles/core/swf/copy_csv_xls_pdf.swf') }}">
+    <div class="content">
+        <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Title</th>
-                    <th>Type</th>
-                    <th>Field</th>
-                    <th>Name</th>
-                    <th>Status</th>
-                    <th>Created</th>
-                    <th class="no-sort">Actions</th>
+                    <th>{{ 'cms.field.id'|trans }}</th>
+                    <th>{{ 'cms.field.title'|trans }}</th>
+                    <th>{{ 'cms.field.type'|trans }}</th>
+                    <th>{{ 'cms.field.field'|trans }}</th>
+                    <th>{{ 'cms.field.nale'|trans }}</th>
+                    <th>{{ 'cms.field.status'|trans }}</th>
+                    <th>{{ 'cms.field.created'|trans }}</th>
+                    <th class="no-sort">{{ 'actions'|trans }}</th>
                 </tr>
             </thead>
             <tbody>
@@ -60,17 +42,41 @@
                     <td>{{ entity.type }}</td>
                     <td>{{ entity.field.typefield }}</td>
                     <td>{{ entity.name }}</td>
-                    <td><div class="switch"><input type="checkbox" class="status"></div></td>
+                    <td><div class="switch"><input type="checkbox" class="status"{% if entity.published %} checked="checked"{% endif %}></div></td>
                     <td>{% if entity.created %}{{ entity.created|date('d/m/Y H:i:s') }}{% endif %}</td>
                     <td>
-                        <a href="{{ path('admin_field_edit', { 'id': entity.id }) }}"><i class="fa fa-pencil"></i></a>
-                        <a data-toggle="modal" href='#modal-delete' class="btn btn-icon-toggle" data-toggle="tooltip" data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}"><i class="fa fa-trash-o"></i></a>
+                        <a href="{{ path('admin_field_edit', { 'id': entity.id }) }}" class="btn btn-info btn-simple btn-xs"><i class="fa fa-pencil"></i></a>
+                        <a data-toggle="modal" href='#modal-delete' class="btn btn-danger btn-simple btn-xs" data-toggle="tooltip" data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}"><i class="fa fa-trash-o"></i></a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     </div>
+</div>
+
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form action="{{ path('admin_field_new') }}" method="get">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h3 id="myModalLabel">{{ 'cms.content.choose_field_type'|trans }}</h3>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            {{ fieldstype|raw }}
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-fill" data-dismiss="modal" aria-hidden="true">{{ 'Close'|trans }}</button>
+                        <button class="btn btn-info btn-fill" type="submit">{{ 'New'|trans }}</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <div class="modal fade" id="modal-delete" aria-labelledby="simpleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -90,3 +96,14 @@
     </div>
 
 {% endblock %}
+{% block javascript %}
+<script type="text/javascript">
+$('#modal-delete').on('show.bs.modal', function (event) {
+      var button = $(event.relatedTarget);
+      var id = button.data('id');
+      var path = Routing.generate('{{ url }}', {id: id});
+      var modal = $(this);
+      modal.find('.modal-footer > a.btn-danger').attr('href', path);
+})
+</script>
+{% endblock javascript %}
