--- a/web/templates/Default/style.css
+++ b/web/templates/Default/style.css
@@ -8,3 +8,88 @@
  * Version: 1.0
  * Tags: responsive-layout, fluid-layout, translation-ready, microformats, rtl-language-support
  */
+
+html, body {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+	background: transparent url('assets/imgs/back-summer.jpg') center center fixed;
+	font: 90%/1.61803399 'Open Sans',Helvetica,Arial,sans-serif;
+	color: #333;
+}
+
+a {
+	text-decoration: none;
+}
+
+.btn {
+	display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  color: #fff;
+}
+
+.btn-simple {
+	border: 1px solid #1ecbca;
+}
+
+.btn-fill {
+	background: #1ecbca;
+}
+
+.pull-left {
+	float: left !important;
+}
+
+.pull-right {
+	float: right !important;
+}
+
+.clearfix {
+	clear: both;
+}
+
+header {
+	background: rgba(51,51,60,.88);
+	height: 60px;
+	max-height: 60px;
+}
+
+header .buttons {
+	padding-top: 13px;
+}
+
+.left-header {
+	width: 60%;
+}
+
+.right-header {
+	width: 40%;
+}
+
+.container {
+	width: 980px;
+	margin: 0 auto;
+	position: relative;
+}
+
