--- a/src/CMS/Bundle/CoreBundle/Resources/views/Theme/index.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Theme/index.html.twig
@@ -43,7 +43,7 @@
 					<div class="row">
 						<div class="col-md-7">
 							{% if asset_exists(theme['screenshot']) %}
-								<img src="{{ asset(theme['screenshot']) }}" alt="thumbnail theme">
+								<img src="{{ asset(theme['screenshot']) }}" alt="thumbnail theme" class="img-responsive">
 							{% endif %}
 						</div>
 						<div class="col-md-5">
