--- a/web/templates/Default/category.html.twig
+++ b/web/templates/Default/category.html.twig
@@ -26,14 +26,25 @@
 		<div id="content" class="row" ng-controller="contentListController as contentList">
 			<div class="col-sm-12 col-md-4" ng-repeat="content in contentList.contents">
 				<div class="card">
-					<div class="image">
+					<div class="image" ng-show="{{content.thumbnail != ''}}">
 						<img ng-src="/uploads/thumbs/{{content.thumbnail}}" />
 						<div class="header">
 							<h2 class="title">{{content.title}}</h2>
 							<div class="date">{{content.created | date : 'dd/MM/yyyy'}}</div>
 						</div>
 					</div>
-
+					<div class="content">
+						<div class="no-thumb" ng-show="{{content.thumbnail == ''}}" >
+							<h2 class="title">{{content.title}}</h2>
+							<div class="date">{{content.created | date : 'dd/MM/yyyy'}}</div>
+							<div class="description" ng-bind-html="content.description | rawHtml"></div>
+						</div>
+						<div class="pull-left">
+							<img ng-src="/uploads/avatars/{{content.author.id}}/{{content.author.avatar}}" alt="{{content.author.user_nicename}}" title="{{content.author.user_nicename}}" class="avatar">
+							<span class="author">{{content.author.user_nicename}}</span>
+						</div>
+						<div class="clearfix"></div>
+					</div>
 				</div>
 			</div>
 		</div>
