--- a/templates/Defaultang/directives/content-travel.html
+++ b/templates/Defaultang/directives/content-travel.html
@@ -1,27 +1,7 @@
-<div class="card">
-	<div class="image" ng-show="{{content.thumbnail != ''}}">
-		<a href=""><img ng-src="http://localhost:8000/uploads/thumbs/{{content.thumbnail}}" /></a>
-		<div class="header">
-			<h2 class="title">{{content.title}}</h2>
-			<div class="date">{{content.created | date : 'dd/MM/yyyy'}}</div>
-		</div>
+<div class="travel">
+	<img ng-src="http://localhost:8000/uploads/thumbs/{{content.thumbnail}}" alt="{{content.title}}" class="img-responsive" />
+	<div class="header">
+		<h1>{{content.title}}</h1>
+		<h3 class="subtitle">{{content.subtitle}}</h3>
 	</div>
-	<div class="content" ng-show="{{content.thumbnail == ''}}">
-		<div class="no-thumb">
-			<h2 class="title">{{content.title}}</h2>
-			<div class="date">{{content.created | date : 'dd/MM/yyyy'}}</div>
-			<div class="description" ng-bind-html="content.description | rawHtml"></div>
-		</div>
-	</div>
-	<div class="content infos">
-		<div class="pull-left">
-			<img ng-src="http://localhost:8000/uploads/avatars/{{content.author.id}}/{{content.author.avatar}}" alt="{{content.author.user_nicename}}" title="{{content.author.user_nicename}}" class="avatar">
-		</div>
-		<div class="pull-left">
-			<span class="author"><a href="">{{content.author.user_nicename}}</a><br /></span>
-			<span class="taxonomy">{{content.categories[0].title}}</span>
-		</div>
-		<div class="clearfix"></div>
-	</div>
-	<div class="clearfix"></div>
 </div>
