--- a/templates/Defaultang/index.html
+++ b/templates/Defaultang/index.html
@@ -8,7 +8,7 @@
 </head>
 <body ng-app="CMSApp">
 	<div id="content"></div>
-	<header>
+	<header class="{{classHeader}}">
 		<div class="container">
 			<div class="left-header pull-left">
 				<a href=""><span id="logo"></span><span class="title"></span></a>
@@ -22,12 +22,14 @@
 			<div class="clearfix"></div>
 		</div>
 	</header>
-	<div class="container">
-		<ui-view></ui-view>
-	</div>
+	<div ng-view class="view-frame"></div>
+
 	<script src="assets/js/angular.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
-	<script src="assets/js/app.js"></script>
+	<script src="assets/js/angular-resource.min.js"></script>
+	<script src="assets/js/angular-route.min.js"></script>
+	<script src="assets/js/controllers.js"></script>
 	<script src="assets/js/directive.js"></script>
+	<script src="assets/js/services.js"></script>
+	<script src="assets/js/app.js"></script>
 </body>
 </html>
