--- a/templates/Defaultang/views/home.html
+++ b/templates/Defaultang/views/home.html
@@ -1,3 +1,7 @@
-<div class="col-sm-12 col-md-4" ng-repeat="content in contents">
-	<content type="travel"></content>
+<div class="container">
+<div ng-controller="contentListController as c">
+<div class="col-sm-12 col-md-4" ng-repeat="content in c.contents">
+	<content-list type="travel"></content-list>
+</div>
+</div>
 </div>
