animation card list

--- a/templates/Defaultang/views/home.html
+++ b/templates/Defaultang/views/home.html
@@ -1,5 +1,5 @@
 <div class="container">
-<div ng-controller="contentListController as c">
+<div class="card-list" ng-controller="contentListController as c">
 <div class="col-sm-12 col-md-4" ng-repeat="content in c.contents">
 	<content-list type="travel"></content-list>
 </div>
