--- a/templates/Defaultang/directives/content-list-travel.html
+++ b/templates/Defaultang/directives/content-list-travel.html
@@ -22,6 +22,7 @@
 			<span class="taxonomy">{{content.categories[0].title}}</span>
 		</div>
 		<div class="clearfix"></div>
+		<div class="chapo" ng-bind-html="content.fields.chapo | rawHtml"></div>
 	</div>
 	<div class="clearfix"></div>
 </div>
