--- a/templates/Defaultang/style.css
+++ b/templates/Defaultang/style.css
@@ -217,6 +217,11 @@ header .buttons {
   font-size: 18px;
 }
 
+.card .header a {
+  color: #fff;
+  text-decoration: none;
+}
+
 .card .header h4 a {
   color: #fff;
 }
@@ -289,6 +294,11 @@ header .buttons {
 .card .author {
   font-size: 12px;
   font-weight: 300;
+}
+
+.card .author a {
+  color: #333;
+  text-decoration: none;
 }
 
 .card .author i {
@@ -418,6 +428,45 @@ header .buttons {
   border:1px solid #ff0000;
   padding: 10px;
 }
+
+.card-list .card {
+  height: 276px;
+}
+
+.card-list .card .chapo {
+  height: 0px;
+  font-size: 1.1em;
+  overflow: hidden;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+.card-list .card .image {
+  height: 215px;
+  overflow: hidden;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+.card-list .card:hover .image {
+  height: 145px;
+}
+
+.card-list .card:hover .chapo {
+  height: 70px;
+
+}
+
+.card-list .card .image img {
+  display: block;
+}
+
 
 .travel {}
 
