template article et template liste

--- a/templates/Defaultang/directives/content-travel.html
+++ b/templates/Defaultang/directives/content-travel.html
@@ -1,7 +1,13 @@
 <div class="travel">
-	<img ng-src="http://localhost:8000/uploads/thumbs/{{content.thumbnail}}" alt="{{content.title}}" class="img-responsive" />
-	<div class="header">
-		<h1>{{content.title}}</h1>
-		<h3 class="subtitle">{{content.subtitle}}</h3>
-	</div>
+    <div class="travel-background">
+        <div id="content"></div>
+        <img ng-src="http://localhost:8000/uploads/thumbs/{{content.thumbnail}}" alt="{{content.title}}"
+             class="img-responsive"/>
+        <div class="header">
+            <h1>{{content.title}}</h1>
+            <h3 class="subtitle">{{content.subtitle}}</h3>
+        </div>
+    </div>
+    <div class="container content" ng-bind-html="content.description | rawHtml">
+    </div>
 </div>
