--- a/templates/Defaultang/views/home.html
+++ b/templates/Defaultang/views/home.html
@@ -1,3 +1,4 @@
+<div id="content"></div>
 <div class="container">
 <div class="card-list" ng-controller="contentListController as c">
 <div class="col-sm-12 col-md-4" ng-repeat="content in c.contents">
