--- a/templates/Defaultang/index.html
+++ b/templates/Defaultang/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="CMSApp">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>{{title}}</title>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body ng-app="CMSApp">
-	<div id="content"></div>
+<body>
 	<header class="{{classHeader}}">
 		<div class="container">
 			<div class="left-header pull-left">
