--- a/src/CMS/Bundle/MediaBundle/Resources/views/Media/index.html.twig
+++ b/src/CMS/Bundle/MediaBundle/Resources/views/Media/index.html.twig
@@ -11,6 +11,7 @@
             <div class="card">
                 <div class="header">Resize Progression</div>
                 <div class="content">
+                    <span class="filename"></span>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                     </div>
@@ -87,8 +88,10 @@
                             this_response = response.substring(last_response_len);
                             last_response_len = response.length;
                         }
-                        var value = this_response;
-                        $('.row.resized .progress .progress-bar').attr('aria-valuenow', value).css('width', value+'%').html(value+'%');
+                        var value = JSON.parse(this_response);
+
+                        $('.row.resized .progress .progress-bar').attr('aria-valuenow', value.percent).css('width', value.percent+'%').html(value.percent+'%');
+                        $('.row.resized .content span.filename').html(value.filename);
                     }
                 }
             }).done(function() {
