--- a/src/CMS/Bundle/MediaBundle/Resources/views/Settings/index.html.twig
+++ b/src/CMS/Bundle/MediaBundle/Resources/views/Settings/index.html.twig
@@ -3,13 +3,15 @@
 {% block body %}
     <h1>Media</h1>
     {{ form_start(form) }}
-    <ul id="size-fields-list" data-prototype="{{ form_widget(form.settings.vars.prototype)|e }}">
+    {{ form_label(form.settings) }}
+    <ul id="size-fields-list" class="list-unstyled" data-prototype="{{ form_widget(form.settings.vars.prototype)|e }}">
     {% for setting in form.settings %}
         <li>{{ form_row(setting) }}</li>
     {% endfor %}
     </ul>
+    {{ form_rest(form) }}
     {{ form_end(form) }}
-    <a href="#" id="add-another-email">Add size</a>
+
 
 
 {% endblock body %}
@@ -18,24 +20,69 @@
     // keep track of how many email fields have been rendered
     var sizeCount = '{{ form.settings|length }}';
 
+    var $collectionHolder;
+
+    // setup an "add a tag" link
+    var $addTagLink = $('<a href="#" class="btn btn-info pull-left" id="add-another-size">Add size</a>');
+    var $newLinkLi = $('<li></li>').append($addTagLink);
+
     jQuery(document).ready(function() {
-        jQuery('#add-another-email').click(function(e) {
+        // Get the ul that holds the collection of tags
+        $collectionHolder = $('ul#size-fields-list');
+
+        // add a delete link to all of the existing tag form li elements
+        $collectionHolder.find('li').each(function() {
+            addSizeFormDeleteLink($(this));
+        });
+
+        // add the "add a tag" anchor and li to the tags ul
+        $collectionHolder.append($newLinkLi);
+
+        // count the current form inputs we have (e.g. 2), use that as the new
+        // index when inserting a new item (e.g. 2)
+        $collectionHolder.data('index', $collectionHolder.find(':input').length);
+
+        $addTagLink.on('click', function(e) {
+            // prevent the link from creating a "#" on the URL
             e.preventDefault();
 
-            var sizeList = jQuery('#size-fields-list');
-
-            // grab the prototype template
-            var newWidget = sizeList.attr('data-prototype');
-            // replace the "__name__" used in the id and name of the prototype
-            // with a number that's unique to your emails
-            // end name attribute looks like name="contact[emails][2]"
-            newWidget = newWidget.replace(/__name__/g, sizeCount);
-            sizeCount++;
-
-            // create a new list element and add it to the list
-            var newLi = jQuery('<li></li>').html(newWidget);
-            newLi.appendTo(sizeList);
+            // add a new tag form (see next code block)
+            addSizeForm($collectionHolder, $newLinkLi);
         });
-    })
+    });
+
+
+
+    function addSizeForm($collectionHolder, $newLinkLi) {
+        // Get the data-prototype explained earlier
+        var prototype = $collectionHolder.data('prototype');
+
+        // get the new index
+        var index = $collectionHolder.data('index');
+
+        // Replace '__name__' in the prototype's HTML to
+        // instead be a number based on how many items we have
+        var newForm = prototype.replace(/__name__/g, index);
+        prototype.replace(/__name__/g, index);
+        // increase the index with one for the next item
+        $collectionHolder.data('index', index + 1);
+
+        // Display the form in the page in an li, before the "Add a tag" link li
+        var $newFormLi = $('<li></li>').append(newForm);
+        $newLinkLi.before($newFormLi);
+    }
+
+    function addSizeFormDeleteLink($sizeFormLi) {
+        var $removeFormA = $('<label class="control-label col-md-12">&nbsp;</label><a href="#" class="btn btn-danger col-md-8 pull-right"><i class="fa fa-trash-o"></i></a>');
+        $sizeFormLi.find('.form-group .col-md-1').append($removeFormA);
+
+        $removeFormA.on('click', function(e) {
+            // prevent the link from creating a "#" on the URL
+            e.preventDefault();
+
+            // remove the li for the tag form
+            $sizeFormLi.remove();
+        });
+    }
 </script>
 {% endblock javascript %}
