gestion des medias, suppression en ajax

--- a/app/Resources/views/admin/base_admin.html.twig
+++ b/app/Resources/views/admin/base_admin.html.twig
@@ -77,6 +77,12 @@
                     </div>
                 </li>
                 <li>
+                    <a href="{{ path('admin_media_index') }}">
+                        <i class="pe-7s-photo"></i>
+                        <p>{{ 'cms.media.media'|trans }}</p>
+                    </a>
+                </li>
+                <li>
                     <a href="#administration" data-toggle="collapse" aria-expanded="false" class="collapsed">
                         <i class="pe-7s-tools"></i>
                         <p>Administration <b class="caret"></b></p>
