--- a/src/CMS/Bundle/MediaBundle/Resources/views/Media/index.html.twig
+++ b/src/CMS/Bundle/MediaBundle/Resources/views/Media/index.html.twig
@@ -13,7 +13,9 @@
                 <div class="content">
                     <span class="filename"></span>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0"
+                             aria-valuemin="0" aria-valuemax="100">0%
+                        </div>
                     </div>
                 </div>
             </div>
@@ -25,15 +27,20 @@
     {{ form(form) }}
     <div class="row thumbs">
         {% for medium in media %}
-            <div class="col-md-2 centered thumb">
+            <div class="col-md-2 centered thumb" id="thumb-{{ medium.id }}">
                 <div class="thumbnail">
-                    <a href="javascript:" class="text-center" data-toggle="modal" data-target="#modal-thumb" data-url="{{ asset(medium.webPath) }}" data-id="{{ medium.id }}" data-alt="{{ medium.metas['alt_1'] }}">
-                        <img src="{{ asset(medium.webPathList) }}" alt="{{ medium.metas['alt_1'] }}" title="{{ medium.metas['title_1'] }}">
+                    <a href="#modal-thumb" class="text-center" data-toggle="modal" data-target="#modal-thumb"
+                       data-url="{{ asset(medium.webPath) }}" data-id="{{ medium.id }}"
+                       data-alt="{{ medium.metas['alt_1'] }}">
+                        <img src="{{ asset(medium.webPathList) }}" alt="{{ medium.metas['alt_1'] }}"
+                             title="{{ medium.metas['title_1'] }}">
                     </a>
                     <div class="caption text-center">
                         {{ file_details(medium.id)|raw }}
                     </div>
-                    <a href="#modal-delete" data-toggle="modal" rel="tooltip" class="btn btn-simple btn-danger btn-xs pull-right" data-id="{{ medium.id }}" data-placement="top" data-original-title="Supprimer">
+                    <a href="#modal-delete" data-toggle="modal" rel="tooltip"
+                       class="btn btn-simple btn-danger btn-xs pull-right" data-id="{{ medium.id }}"
+                       data-placement="top" data-original-title="Supprimer">
                         <i class="fa fa-trash-o"></i>
                     </a>
                     <div class="clearfix"></div>
@@ -41,6 +48,27 @@
             </div>
         {% endfor %}
     </div>
+
+    <div class="modal fade" id="modal-thumb">
+        <div class="modal-dialog modal-large">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-9"></div>
+                        <div class="col-md-3"></div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
     <div class="modal fade" id="modal-delete" aria-labelledby="simpleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -53,8 +81,10 @@
                     {{ 'cms.content.modal.text_delete'|trans }}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn ink-reaction btn-raised btn-default-bright" data-dismiss="modal"><i class="fa fa-close"></i> {{ 'cancel'|trans }}</button>
-                    <a href="" class="btn ink-reaction btn-raised btn-danger"><i class="fa fa-trash-o"></i> {{ 'delete'|trans }}</a>
+                    <button type="button" class="btn ink-reaction btn-raised btn-default-bright" data-dismiss="modal"><i
+                                class="fa fa-close"></i> {{ 'cancel'|trans }}</button>
+                    <a href="javascript:" class="btn ink-reaction btn-raised btn-danger"><i
+                                class="fa fa-trash-o"></i> {{ 'delete'|trans }}</a>
                 </div>
             </div>
         </div>
@@ -62,42 +92,62 @@
 {% endblock body %}
 {% block javascript %}
     <script type="text/javascript">
+        var id = null;
         $('#modal-delete').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget);
-            var id = button.data('id');
-            var path = Routing.generate('{{ url }}', {id: id});
-            var modal = $(this);
-            modal.find('.modal-footer > a.btn-danger').attr('href', path);
+            id = button.data('id');
         });
+        $(document).ready(function () {
+            $('#modal-delete').find('.modal-footer > a.btn-danger').on('click', function () {
+                var path = Routing.generate('{{ url }}', {id: id});
+                console.log(path);
+                $.ajax({
+                    url: path,
+                    type: "GET",
+                    dataType: "json",
+                    success: function (msg) {
+                        if (msg.status) {
+                            $('#modal-delete').modal('hide');
+                            $('#thumb-' + id).fadeOut();
+                        }
+                    }
+                })
+            });
+        });
+
+        $('#modal-thumb').on('show.bs.modal', function (event) {
+            var link = $(event.relatedTarget);
+            var modal = $(this);
+            modal.find('.modal-title').html(link.data('alt'));
+            modal.find('.modal-content .col-md-9').html('<img src="' + link.data('url') + '" class="img-responsive" />')
+        });
+
 
         function resizeMedia() {
             $('.row.resized .col-md-6').hide().removeClass('hide').fadeIn();
             var last_response_len = false;
             $.ajax("{{ path('admin_media_resize') }}", {
                 xhrFields: {
-                    onprogress: function(e)
-                    {
+                    onprogress: function (e) {
                         var this_response, response = e.currentTarget.response;
-                        if(last_response_len === false)
-                        {
+                        if (last_response_len === false) {
                             this_response = response;
                             last_response_len = response.length;
                         }
-                        else
-                        {
+                        else {
                             this_response = response.substring(last_response_len);
                             last_response_len = response.length;
                         }
                         var value = JSON.parse(this_response);
 
-                        $('.row.resized .progress .progress-bar').attr('aria-valuenow', value.percent).css('width', value.percent+'%').html(value.percent+'%');
+                        $('.row.resized .progress .progress-bar').attr('aria-valuenow', value.percent).css('width', value.percent + '%').html(value.percent + '%');
                         $('.row.resized .content span.filename').html(value.filename);
                     }
                 }
-            }).done(function() {
-                setTimeout(function(data) {
+            }).done(function () {
+                setTimeout(function (data) {
                     $('.row.resized .col-md-6').fadeOut();
-                },5000)
+                }, 5000)
             })
         }
     </script>
